# BRFC-Performance

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  secrets.toml  utils.py
Benchmarks/: players_benchmark.py  set_pieces.py  team_benchmark.py
Config/: config_mappings.py  config_metrics.py  league_weights.py
assets/: styles.css
pages/: 1_Players.py  2_Teams.py  3_Similar_Players.py  4_Teams_Set_Pieces.py  5_Player_Set_Pieces.py
